[project]

name = "kisa"

version = "0.1.0"

description = "A modern OOP system for Python"

readme = "README.md"

requires-python = ">=3.6"

license = {file = "LICENSE.txt"}

keywords = ["OOP", "Object Oriented", "Object Oriented Programming"]

authors = [
  {name = "Noam Nisanov", email = "noam.nisanov@gmail.com" }
]

maintainers = [
  {name = "Noam Nisanov", email = "noam.nisanov@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = []

[build-system]
requires = ["setuptools>=43.0.0"]
build-backend = "setuptools.build_meta"
